# beanbot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture.md  migration-status.md  role-menus.md
src/beanbot/: __main__.py  app.py  config.py  logging_config.py
src/beanbot/cogs/: __init__.py  fun_cog.py  help.py  info_cog.py  meme_cog.py  ping.py
src/beanbot/core/: config.py  logging.py
src/beanbot/discord/: bot.py
src/beanbot/features/: registry.py
src/beanbot/features/help/: __init__.py  cog.py
src/beanbot/features/info/: __init__.py  cog.py
src/beanbot/features/memes/: __init__.py  api.py  cog.py  puns.py
src/beanbot/features/ping/: __init__.py  cog.py
src/beanbot/features/role_menus/: __init__.py  cog.py  models.py  repository.py  service.py  views.py
src/beanbot/migrations/: __init__.py  migrate_role_settings.py
src/beanbot/resources/: puns.csv
src/beanbot/services/: meme_api.py  puns.py
tests/: test_config.py  test_meme_cog.py  test_role_menus.py
tests/unit/core/: test_config.py
tests/unit/features/: test_registry.py
tests/unit/features/memes/: test_cog.py
tests/unit/features/role_menus/: test_role_menu_cog.py  test_role_menus.py
tests/unit/migrations/: test_execution.py  test_role_settings.py
