[project]
name = "beanbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.2",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "aiohttp>=3.9.0",
  "pymongo>=4.11,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "beanbot.features.help.cog",
  "beanbot.features.info.cog",
  "beanbot.features.memes.cog",
  "beanbot.features.ping.cog",
  "beanbot.features.role_menus.cog",
]
# discord.py's command decorators erase callback parameter types under strict mypy.
disable_error_code = ["arg-type", "type-arg"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beanbot = ["resources/*.csv", "resources/*.gif", "resources/*.png"]
